test(auth): add ActivateAccountUseCase and TeacherAccountActivatedListener unit tests
- ActivateAccountUseCaseTest: 5 cases covering invalid token, user not found,
  happy path, event data validation, and architectural boundary assertion
  (no TeacherRepository dependency)
- TeacherAccountActivatedListenerTest: 3 cases covering ROLE_TEACHER activation,
  ignored roles, and teacher not found scenario
- Total unit tests: 88 (80 existing + 8 new)