@@ -1,9 +1,12 @@
 package org.school.management.auth.domain.valueobject;
 
+import java.util.Objects;
+
 public record HashedPassword(String value) {
 
     public HashedPassword {
-        if (value == null || value.trim().isEmpty()) {
+        // Validación de dominio estricta
+        if (value == null || value.isBlank()) {
             throw new IllegalArgumentException("Hashed password cannot be null or empty");
         }
     }
@@ -12,19 +15,33 @@ public record HashedPassword(String value) {
         return new HashedPassword(hashedValue);
     }
 
-    public boolean matches(String plainPassword, PasswordEncoder encoder) {
-        return encoder.matches(plainPassword, this.value);
+    /**
+     * Factory method que asegura que el resultado del hashing sea válido.
+     * Esto previene el error java.lang.IllegalArgumentException en los tests.
+     */
+    public static HashedPassword fromPlain(String plainValue, PasswordEncoder encoder) {
+        Objects.requireNonNull(encoder, "PasswordEncoder is required");
+        String hashed = encoder.encode(plainValue);
+
+        if (hashed == null || hashed.isBlank()) {
+            throw new IllegalStateException("The password encoder returned an invalid hash");
+        }
+
+        return new HashedPassword(hashed);
     }
 
-    // Seguridad — nunca exponer el hash
+    public boolean matches(String plainPassword, PasswordEncoder encoder) {
+        Objects.requireNonNull(encoder, "PasswordEncoder is required");
+        return encoder.matches(plainPassword, this.value); //
+    }
+
     @Override
     public String toString() {
-        return "HashedPassword{***}";
+        return "HashedPassword{***}"; //
     }
 
     public interface PasswordEncoder {
         String encode(String plainPassword);
-
         boolean matches(String plainPassword, String hashedPassword);
     }
 }
